--- a/DjangoCourseHW/pyproject.toml
+++ b/DjangoCourseHW/pyproject.toml
@@ -10,7 +10,8 @@ python = "^3.11"
 django = "^4.2"
 requests = "^2.28.2"
 markdown = "^3.4.3"
-psycopg2 = "2.9.6"
+psycopg2-binary = "2.9.6"
+pillow = "^9.5.0"
 
 
 
