--- a/DjangoCourseHW/pyproject.toml
+++ b/DjangoCourseHW/pyproject.toml
@@ -12,6 +12,10 @@ requests = "^2.28.2"
 markdown = "^3.4.3"
 psycopg2-binary = "2.9.6"
 pillow = "^9.5.0"
+djangorestframework = "^3.14.0"
+pytz = "^2023.3"
+geopy = "^2.3.0"
+timezonefinder = "^6.2.0"
 
 
 
